--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,15 @@
 .App {
 
 }
+
+.bg-light {
+    border-bottom: 3px solid #158CBA;
+    padding: 1.3rem 0;
+}
+
+.b-content {
+    background: white;
+    margin-top: 10px;
+    padding: 20px 20px 40px 20px;
+    box-shadow: 0 8px 15px rgba(10, 10, 10, .1), 0 0 0 1px rgba(10, 10, 10, .1);
+}
